<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.practica1.HomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvLeccionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringLeccionName"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnNuevoTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnNuevoTest"
        android:onClick="nuevoTest"/>

    <Button
        android:id="@+id/btnNuevoEjercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnNuevoEjercicio"
        android:onClick="nuevoEjercicio"/>

    <Button
        android:id="@+id/btnSeguimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnSeguimiento"
        android:onClick=""/>



</LinearLayout>
