<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNuevoEjercicioActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.practica1.NuevoEjercicioActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEjercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubirFichero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnSubirFichero"/>

    <Button
        android:id="@+id/btnSacarFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnSacarFoto"/>

    <Button
        android:id="@+id/btnGrabarAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnGrabarAudio"
        android:onClick="clickRecAudio"/>

    <Button
        android:id="@+id/btnGrabaVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringBtnGrabarVideo"
        android:onClick="clickRecVideo"/>

</LinearLayout>
